photo dimensions and link color

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3402,7 +3402,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rMEAgZRMjO {
-  background-image: url("../../../assets/images/thewitt-runnersworlds-2000x1333.jpg");
+  background-image: url("../../../assets/images/thewitt-runnersworlds-7-2000x1333.jpeg");
 }
 .cid-rNCyujMS8d {
   padding-top: 30px;
